test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_target_items/src/struct_impl_assoc_const.sw
library;

struct S {
    field: u8,
}

#[storage(invalid)]
#[inline(invalid)]
#[test(invalid)]
//! Invalid inner comment.
#[payable(invalid)]
#[deprecated(invalid)]
#[fallback(invalid)]
impl S {
    #[storage(invalid)]
    #[inline(invalid)]
    #[test(invalid)]
    //! Invalid inner comment.
    #[payable(invalid)]
    #[fallback(invalid)]
    const ASSOC_CONST: u8 = 0;
}
